# QDiscordLib

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: DiscordClient.h  serialization.h
src/: DiscordClient.cpp  serialization.cpp
